--- a/style.css
+++ b/style.css
@@ -1,41 +1,59 @@
 #calculator {
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    width: 350px;
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    width: 300px;
 }
 
-#form {
-    display: flex;
-    flex-direction: column;
+.input-wrapper {
+    display: block;
+    position: relative;
+    height: 1.5rem;
 }
 
 label {
     display: inline-block;
+    position: absolute;
+    left: 0;
     text-align: left;
-    width: 288px;
 }
 
 input {
     display: inline-block;
+    position: absolute;
+    right: 0;
     text-align: right;
     width: 50px;
 }
 
+button {
+    margin: 0.5rem;
+}
+
 #output {
+    display: block;
+    position: absolute;
+    left: 50%;
+    -ms-transform: translate(-50%);
+    transform: translate(-50%);
+    height: 2rem;
+    line-height: 2rem;
+    width: 225px;
+    border-radius: 0.75rem;
     color: white;
 }
 
 .good {
     background-color: green;
+    box-shadow: 5px 5px 15px green;
+
 }
 
 .bad {
     background-color: red;
+    box-shadow: 5px 5px 15px red;
 }
